--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: bash
 services: docker
 
 script:
-   - travis_wait ./bin/build
+   - travis_wait 30 ./bin/build
 
 after_script:
    - docker images
